<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightGreen"
            android:text="@string/heading" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="183dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="148dp"
                android:layout_height="match_parent"
                android:src="@drawable/mouse" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/tendp"
                android:text="@string/entryTxt" />
        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/armorLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/armorLTxt" />

            <TextView
                android:id="@+id/armorTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:text="@string/defaultValue" />

            <TextView
                android:id="@+id/attackLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:text="@string/attckLblTxt" />

            <TextView
                android:id="@+id/attackTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:text="@string/defaultValue" />

            <Button
                android:id="@+id/startBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="2"
                android:text="@string/startBtn" />
        </GridLayout>

    </LinearLayout>

</FrameLayout>