<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainGameFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/heading2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/hello_blank_fragment" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="266dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="190dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="92dp"
                    android:layout_height="110dp"
                    android:src="@drawable/mouse" />

                <android.support.v7.widget.GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/armorLbl2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/armorLTxt" />

                    <TextView
                        android:id="@+id/armorTxt2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        app:layout_column="1"
                        app:layout_row="0" />

                    <TextView
                        android:id="@+id/attackLbl2"
                        android:layout_width="96dp"
                        android:layout_height="wrap_content"
                        android:text="@string/attckLblTxt"
                        app:layout_column="0"
                        app:layout_row="1" />

                    <TextView
                        android:id="@+id/attackTxt2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        app:layout_column="1"
                        app:layout_row="1" />
                </android.support.v7.widget.GridLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/banditImage"
                    android:layout_width="92dp"
                    android:layout_height="109dp"
                    android:src="@drawable/squirrle" />

                <android.support.v7.widget.GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/banArmLbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/armorLTxt" />

                    <TextView
                        android:id="@+id/banArmTxt2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        app:layout_column="1"
                        app:layout_row="0" />

                    <TextView
                        android:id="@+id/banAttackLbl"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/attckLblTxt"
                        app:layout_column="0"
                        app:layout_row="1" />

                    <TextView
                        android:id="@+id/banAttackTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        app:layout_column="1"
                        app:layout_row="1" />
                </android.support.v7.widget.GridLayout>
            </LinearLayout>

        </LinearLayout>

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/GreenGray">

            <Button
                android:id="@+id/fightBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fight" />

            <Button
                android:id="@+id/runBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/run"
                app:layout_column="1"
                app:layout_row="0" />
        </android.support.v7.widget.GridLayout>

    </LinearLayout>

</FrameLayout>